chore: genai image generation and summerization
